# nanocockpit

./: .gitignore  README.md  requirements.txt
docs/literature_review/: scopus_dataset.csv  scopus_query.txt
src/client/: README.md
src/client/aideck_cpx_msgs/: CMakeLists.txt  package.xml
src/client/aideck_cpx_msgs/msg/: CPXHeader.msg  CPXPacket.msg  ImageMetadata.msg  Inference.msg
src/client/aideck_cpx_streamer/: package.xml  setup.cfg  setup.py
src/client/aideck_cpx_streamer/aideck_cpx_streamer/: __init__.py  plt_viewer.py  ros_viewer.py
src/client/aideck_cpx_streamer/aideck_cpx_streamer/cpx/: __init__.py  cpx.py  streamer.py
src/client/aideck_cpx_streamer/aideck_cpx_streamer/cpx/transport/: __init__.py  multi.py  tcp.py  udp.py
src/client/aideck_cpx_streamer/aideck_cpx_streamer/utils/: __init__.py  frame_saver.py  quatcompress.py  ros.py  thread_pool.py
src/client/aideck_cpx_streamer/launch/: ros_viewer_launch.xml
src/client/crazyflie-clients-python/: setup.py
src/docker/espidf/: Dockerfile  README.md
src/docker/gap-riscv-gnu-toolchain/: Dockerfile
src/docker/gapsdk/: Dockerfile  README.md
src/docker/gapsdk/scripts/: apply_patches.sh  build.sh
src/gap/: Makefile  README.md  config.h  main.c
src/gap/docs/: himax_supported_framerates.md
src/gap/examples/coroutine/: Makefile  config.h  main.c
src/gap/examples/cpx/: Makefile  config.h  main.c
src/gap/examples/pulp-frontnet/: Makefile  config.h  main.c
src/gap/examples/queue/: Makefile  config.h  main.c
src/gap/examples/queue_async/: Makefile  config.h  main.c
src/gap/examples/streamer/: Makefile  config.h  main.c
src/gap/lib/: camera.c  camera.h  cluster.c  cluster.h  coroutine.h  crc32.c  debug.c  debug.h  event_group.h  list.h  queue.c  queue.h  rng.c  rng.h  soc.c  soc.h  streamer.c  streamer.h  time.c  time.h  trace.c  trace.h  trace_buffer.c  trace_buffer.h  uart.c  uart.h  uart_protocol.c  uart_protocol.h  utils.h
src/gap/lib/camera/: himax.c  himax.h  himax_defs.h
src/gap/lib/cpx/: cpx.c  cpx.h  cpx_spi.c  cpx_spi.h
src/nina/: CMakeLists.txt  README.md  sdkconfig
src/nina/main/: CMakeLists.txt  Kconfig.projbuild  config.h  cpx_spi.c  cpx_spi.h  cpx_types.h  cpx_wifi.c  cpx_wifi.h  idf_component.yml  main.c  soc.h  trace_buffer.c  trace_buffer.h  utils.h
src/stm32/: README.md
src/stm32/app/: .gitignore  Makefile
src/stm32/app/include/: frontnet_appchannel.h  frontnet_config.h  frontnet_ctrl.h  frontnet_inference.h  frontnet_kf.h  frontnet_rng.h  frontnet_state_fwd.h  frontnet_test_inferences.h  frontnet_types.h
src/stm32/app/src/: frontnet_aideck_protocol.c  frontnet_appchannel.c  frontnet_ctrl.c  frontnet_kf.c  frontnet_main.c  frontnet_rng.c  frontnet_state_fwd.c  frontnet_test_inferences.c
src/stm32/crazyflie-firmware/: .gitignore  Makefile
tools/trace/: esp32_trace.ipynb
tools/wireshark/: cpx_streamer.lua  cpx_tcp.lua  cpx_udp.lua
(+78 files in other folders)
